# novel-rewrite-system

./: .gitignore  README.md  agent.md  pyproject.toml
docs/: dev_environment.md  interface_registry.md  reference_profile_format.md  task_handoff_template.md  task_status.md
docs/deployment/: 7.1_ollama_windows_setup.md  7.2_real_model_acceptance.md
docs/design/: 5.4_minimal_pipeline_design.md
docs/handoffs/: 2026-05-26_parallel-1_manual-source-input.md  2026-05-26_parallel-3_project-index-json.md  2026-05-26_phase-1_project-skeleton.md  2026-05-26_review-k-l_code-review.md  2026-05-26_task-5.4_minimal-pipeline.md  2026-05-26_task-6.1_minimal-cli.md  2026-05-26_task-6.2_real-model-entry.md  2026-05-26_task-6.4_minimal-webui.md  2026-05-26_task-7.5_model-strategy-adjustment.md  2026-05-26_task-8.1_webui-file-upload.md  2026-05-26_task-8.2_webui-input-simplification.md  2026-05-26_task-9.1_reference-profile-format.md  2026-05-26_task-9.2_minimal-continuation.md  2026-05-26_task-9.3_tag-library.md  (+14 more)
tests/: test_cli.py  test_config.py  test_continuation_prompt.py  test_continuation_service.py  test_deepseek_client.py  test_draft_generation_prompt.py  test_draft_generation_service.py  test_errors.py  test_local_rewrite_prompt.py  test_local_rewrite_service.py  test_minimal_pipeline.py  test_models.py  test_ollama_client.py  test_projects.py  test_requirements.py  test_source_processing.py  test_sources.py  test_style_analysis_prompt.py  test_style_analysis_service.py  test_tags.py  test_text_chunks.py  test_text_cleaning.py  test_webui.py
(+32 files in other folders)
