[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-rewrite-system"
version = "0.1.0"
description = "中文小说生成与本地改写系统基础骨架"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "httpx>=0.24",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
story-rewrite = "novel_rewrite_system.cli:main"
story-rewrite-webui = "novel_rewrite_system.webui:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
